# maki

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
maki-agent/: Cargo.toml
maki-agent/src/: agent.rs  command.rs  headless.rs  lib.rs  permissions.rs  session.rs  types.rs
maki-agent/src/agent/: compaction.rs  instructions.rs  mod.rs  run.rs  tool_dispatch.rs
maki-agent/src/mcp/: config.rs  error.rs  http.rs  mod.rs  stdio.rs  transport.rs
maki-agent/src/prompts/: claude.md  general.md  research.md  system.md
maki-agent/src/tools/: bash.md  bash.rs  batch.md  batch.rs  code_execution.md  code_execution.rs  edit.rs  find_symbol.rs  fuzzy_replace.rs  glob.rs  grep.rs  index.rs  memory.md  memory.rs  mod.rs  multiedit.md  multiedit.rs  question.md  question.rs  read.rs  registry.rs  schema.rs  skill.rs  task.md  task.rs  todowrite.rs  webfetch.md  webfetch.rs  websearch.rs  write.md  write.rs
maki-code-index/src/: c.rs  common.rs  cpp.rs  csharp.rs  go.rs  java.rs  kotlin.rs  lua.rs  php.rs  python.rs  ruby.rs  scala.rs  swift.rs  typescript.rs
maki-config/src/: lib.rs
maki-docgen/src/: gen_commands.rs  gen_config.rs  gen_keybindings.rs  gen_providers.rs  gen_tools.rs  lua_util.rs  main.rs
maki-interpreter/: Cargo.toml
maki-interpreter/src/: runner.rs
maki-lua/: Cargo.toml
maki-lua/src/: lib.rs  loader.rs  runtime.rs
maki-lua/src/api/: buf.rs  ctx.rs  fn_api.rs  fs.rs  json.rs  mod.rs  setup.rs  tool.rs  ui.rs  yaml.rs
maki-lua/tests/: index_equivalence.rs  plugin_host.rs  spec.rs  treesitter_compat.rs
maki-providers/: Cargo.toml
maki-providers/src/: error.rs  lib.rs  model.rs  provider.rs  tier_map.rs  types.rs
maki-providers/src/providers/: anthropic.rs  dynamic.rs  mod.rs  openai.rs  openai_compat.rs  zai.rs
maki-providers/src/providers/anthropic/: auth.rs  mod.rs
maki-providers/src/providers/copilot/: auth.rs  mod.rs
maki-providers/src/providers/openai/: mod.rs  platform.rs  responses.rs
maki-storage/src/: paths.rs  sessions.rs
maki-tool-macro/src/: lib.rs
maki-ui/: Cargo.toml
maki-ui/src/: animation.rs  app.rs  chat.rs  event_loop.rs  highlight.rs  lib.rs  markdown.rs  mock.rs  render_worker.rs  selection.rs  text_buffer.rs  theme.rs
maki-ui/src/agent/: agent_loop.rs  mod.rs
maki-ui/src/app/: mod.rs  mode.rs  mouse.rs  queue.rs  session.rs  shell.rs  tests.rs  view.rs
maki-ui/src/components/: chat_picker.rs  code_view.rs  command.rs  help_modal.rs  input.rs  keybindings.rs  list_picker.rs  lua_float.rs  mcp_picker.rs  memory_modal.rs  messages.rs  mod.rs  model_picker.rs  question_form.rs  render_hints.rs  status_bar.rs  theme_picker.rs  tool_display.rs
maki-ui/src/components/messages/: mod.rs  segment.rs  tests.rs
maki-ui/src/themes/: carbonfox.toml  fleet_dark.toml  kanagawa.toml  nightfox.toml
plugins/bash/: init.lua
plugins/grep/: init.lua
plugins/index/: init.lua
plugins/index/tests/: helpers.lua  spec.lua
plugins/index/tests/lang/: bash.lua  c.lua  c_sharp.lua  cpp.lua  elixir.lua  go.lua  java.lua  kotlin.lua  lua_lang.lua  markdown.lua  php.lua  python.lua  ruby.lua  rust.lua  scala.lua  swift.lua  typescript.lua
plugins/lib/: shorten_path.lua  tool_view.lua
plugins/lib/tests/: spec.lua
plugins/read/: init.lua
plugins/skill/: init.lua  skill_helpers.lua
plugins/skill/tests/: spec.lua
plugins/webfetch/: init.lua
plugins/websearch/: init.lua
scripts/: analyze.py  collect.py  openai-oauth
site/: index.html
site/docs/content/: _index.md
site/docs/content/commands/: _index.md
site/docs/content/configuration/: _index.md
site/docs/content/headless/: _index.md
site/docs/content/keybindings/: _index.md
site/docs/content/mcp/: _index.md
site/docs/content/permissions/: _index.md
site/docs/content/providers/: _index.md
site/docs/content/quick-start/: _index.md
site/docs/content/tools/: _index.md
site/docs/templates/: base.html
src/: cli.rs  main.rs  print.rs
src/cmd/: migrate.rs  mod.rs  subcmd.rs  tui.rs
