[package]
name = "maki"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "maki"
path = "src/main.rs"

[dependencies]
maki-ui = { path = "maki-ui" }
maki-agent = { workspace = true }
maki-providers = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[workspace]
members = ["maki-agent", "maki-providers", "maki-tool-macro", "maki-ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
maki-agent = { path = "maki-agent" }
maki-providers = { path = "maki-providers" }
maki-tool-macro = { path = "maki-tool-macro" }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.3"
test-case = "3"
ignore = "0.4"
strum = { version = "0.27", features = ["derive"] }
htmd = "0.5"
