[package]
name = "maki"
version.workspace = true
edition = "2024"
authors = ["Tony Solomonik <tony.solomonik@gmail.com>"]
description = "AI coding agent. Native Rust TUI. Immediate startup, 60 FPS, low memory."
license = "MIT"
repository = "https://github.com/tontinton/maki"
homepage = "https://maki.sh"
readme = "README.md"
keywords = ["ai", "agent", "cli", "tui", "coding"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[[bin]]
name = "maki"
path = "src/main.rs"

[features]
demo = ["maki-ui/demo"]

[dependencies]
maki-ui = { workspace = true }
maki-agent = { workspace = true }
maki-config = { workspace = true }
maki-providers = { workspace = true }
maki-storage = { workspace = true }
maki-lua = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
smol = { workspace = true }
futures-lite = { workspace = true }
flume = { workspace = true }
tempfile = { workspace = true }
isahc = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }

[workspace]
members = [
  "maki-agent",
  "maki-config",
  "maki-docgen",
  "maki-highlight",
  "maki-interpreter",
  "maki-lua",
  "maki-providers",
  "maki-storage",
  "maki-tool-macro",
  "maki-config-macro",
  "maki-ui",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Tony Solomonik <tony.solomonik@gmail.com>"]
license = "MIT"
repository = "https://github.com/tontinton/maki"
rust-version = "1.85"

[workspace.dependencies]
maki-agent = { path = "maki-agent" }
maki-config = { path = "maki-config" }
maki-interpreter = { path = "maki-interpreter" }
maki-providers = { path = "maki-providers" }
maki-storage = { path = "maki-storage" }
maki-ui = { path = "maki-ui" }
maki-lua = { path = "maki-lua" }
maki-tool-macro = { path = "maki-tool-macro" }
maki-config-macro = { path = "maki-config-macro" }
maki-highlight = { path = "maki-highlight" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
uuid = { version = "1", default-features = false, features = ["v4"] }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["osc52"] }
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
sha2 = { version = "0.10", default-features = false }
base64 = "0.22"
getrandom = "0.3"
fastrand = "2"
test-case = "3"
ignore = "0.4"
memchr = "2"
strum = { version = "0.27", features = ["derive"] }
htmd = "0.5"
tempfile = "3"
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-perl"] }
grep-regex = "0.1"
grep-searcher = "0.1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }
unicode-width = "0.2"
similar = { version = "2", features = ["inline", "unicode"] }
jiff = { version = "0.2", default-features = false, features = ["std"] }
arboard = { version = "3", default-features = false, features = ["image-data", "wayland-data-control"] }
image = { version = "0.25", default-features = false, features = ["png"] }
flume = { version = "0.11", default-features = false, features = ["async"] }
humantime = "2"
toml = "0.8"
toml_edit = "0.22"
smol = "2"
async-process = "2"
async-lock = "3"
arc-swap = "1"
bitflags = "2"
async-io = "2"
event-listener = "5"
futures-lite = "2"
isahc = { version = "1.7", default-features = false, features = ["text-decoding", "static-curl", "static-ssl"] }
libc = "0.2"
nucleo = "0.5"
nucleo-matcher = "0.3"
open = "5"
criterion = { version = "0.5", features = ["html_reports"] }
etcetera = "0.11"
dotenvy = "0.15"
tree-sitter = "0.26"
include_dir = "0.7"
mlua = { version = "0.11", features = ["luau", "async", "send", "serde", "macros"] }
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-lua = "0.5"
tree-sitter-md = "0.5"
tree-sitter-php = "0.24"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.25"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
monty = { git = "https://github.com/pydantic/monty.git", rev = "2e9df4b", package = "monty" }
notify = { version = "9.0.0-rc.2", default-features = false, features = ["flume", "macos_fsevent"] }
serde_yaml = "0.9"
shell-words = "1"

wait-timeout = "0.2"

[profile.bench]
debug = true
