[package]
name = "maki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
maki-providers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
maki-tool-macro = { workspace = true }
ureq = { workspace = true }
htmd = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
