[package]
name = "maki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
maki-providers = { workspace = true }
maki-interpreter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
maki-tool-macro = { workspace = true }
htmd = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
jiff = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }
