[package]
name = "maki-agent"
version.workspace = true
edition.workspace = true

[dependencies]
maki-providers = { workspace = true }
maki-config = { workspace = true }
maki-interpreter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
strum = { workspace = true }
maki-tool-macro = { workspace = true }
maki-storage = { workspace = true }
regex = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
similar = { workspace = true }
jiff = { workspace = true }
humantime = { workspace = true }
smol = { workspace = true }
async-process = { workspace = true }
flume = { workspace = true }
arc-swap = { workspace = true }
bitflags = { workspace = true }
event-listener = { workspace = true }
async-lock = { workspace = true }
async-io = { workspace = true }
futures-lite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
isahc = { workspace = true }
libc = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
uuid = { workspace = true }


[dev-dependencies]
test-case = { workspace = true }
tempfile = { workspace = true }

