[package]
name = "maki-ui"
version.workspace = true
edition.workspace = true

[dependencies]
maki-agent = { workspace = true }
maki-providers = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
syntect = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
